array.island.Island.scala.error
Compilation error:
Island:40: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                         ^Island:40: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                                          ^